--- a/src/app/pages/customer-service-page/customer-service-order/customer-service-order.component.html
+++ b/src/app/pages/customer-service-page/customer-service-order/customer-service-order.component.html
@@ -23,13 +23,13 @@
 
     <mat-tab>
       <div class="content">
-
+        <customer-service-rebills [id]="customerId"></customer-service-rebills>
       </div>
     </mat-tab>
 
     <mat-tab>
       <div class="content">
-
+        <customer-service-transactions [id]="customerId"></customer-service-transactions>
       </div>
     </mat-tab>
 
