--- a/src/app/pages/customer-service-page/customer-service-customer/notes-component/notes-component.component.scss
+++ b/src/app/pages/customer-service-page/customer-service-customer/notes-component/notes-component.component.scss
@@ -1,51 +1,46 @@
 .container {
-  display: flex;
-  justify-content: space-between;
-  margin: -5px;
-
-  .column {
-    display: flex;
-    flex-direction: column;
-  }
 
   .note {
-    margin: 5px;
+    margin-bottom: 10px;
     background: white;
     padding: 12px;
     font-size: 12px;
     box-shadow: 0 0 4px rgba(0,0,0,0.16);
 
-    .add-button {
-      margin: 10px 0;
-      background: #1DBDA5;
-      color: white;
-      font-size: 14px;
-    }
-
     .header {
       display: flex;
       align-items: center;
-      color: rgba(0,0,0,0.6);
+      color: rgba(0,0,0,0.7);
+      font-size: 12px;
+
+      .author {
+        display: inline-block;
+        background: rgba(0,0,0,0.1);
+        padding: 8px 12px;
+        border-radius: 15px;
+        font-weight: 500;
+      }
+
+      .date {
+        padding-top: 2px;
+        margin-left: auto;
+        font-size: 14px;
+      }
 
       mat-icon {
-        margin-left: auto;
-        height: 18px;
-        width: 18px;
-        font-size: 18px;
+        margin-left: 20px;
+        height: 20px;
+        width: 20px;
+        font-size: 20px;
         cursor: pointer;
       }
     }
 
     .body {
-      margin: 15px 0;
-    }
-
-    .author {
-      display: inline-block;
-      background: rgba(0,0,0,0.1);
-      padding: 6px 8px;
-      border-radius: 12px;
-      font-size: 10px;
+      margin: 25px auto;
+      max-width: 480px;
+      font-size: 14px;
+      line-height: 20px;
     }
   }
 
@@ -88,7 +83,16 @@
 }
 
 .title {
+  display: flex;
+  align-items: center;
   margin-bottom: 15px;
   font-size: 16px;
   color: rgba(0,0,0,0.6);
+
+  .add-button {
+    margin-right: 10px;
+    background: #1DBDA5;
+    color: white;
+    font-size: 12px;
+  }
 }
