Finish customer orders section

--- a/src/app/pages/customer-service-page/customer-service-customer/events-table/events-table.component.scss
+++ b/src/app/pages/customer-service-page/customer-service-customer/events-table/events-table.component.scss
@@ -17,7 +17,7 @@
       height: 28px;
       line-height: 28px;
       padding: 0 5px;
-      background: #1DBDA5;
+      background: #14B0FB;
       font-size: 10px;
       color: white;
     }
