--- a/src/app/pages/customer-service-page/customer-service-order/customer-service-transactions/customer-service-transactions.component.html
+++ b/src/app/pages/customer-service-page/customer-service-order/customer-service-transactions/customer-service-transactions.component.html
@@ -1,31 +1,43 @@
-<div>
+<div class="container">
   <table class="highlight">
     <thead>
       <th>Date</th>
       <th>Description</th>
       <th>Status</th>
-      <th>Amount</th>
+      <th class="amount">Amount</th>
+      <th></th>
     </thead>
 
     <tbody>
-      <ng-container *ngFor="let transaction of entities">
+      <ng-container *ngFor="let transaction of entities; let i = index">
 
-        <tr>
-          <td>{{transaction.createdAt | formatDateTime}}</td>
+        <tr [class.transaction]="i !== 0">
+          <td class="date">{{transaction.createdAt | formatDateTime}}</td>
           <td>{{transaction.alias}}</td>
           <td></td>
-          <td>{{transaction.amount.usd()}}</td>
+          <td class="amount">{{transaction.amount.usd()}}</td>
+          <td><mat-icon [matMenuTriggerFor]="downloadOptions">more_vert</mat-icon>
+            <mat-menu #downloadOptions="matMenu" x-position="before">
+              <button mat-menu-item>REFUND</button>
+              <button mat-menu-item>RETURN</button>
+            </mat-menu>
+          </td>
         </tr>
 
         <ng-container *ngFor="let transactionProduct of transaction.products">
-          <tr>
+          <tr class="products-row">
             <td></td>
             <td>{{transactionProduct.product.name}}</td>
             <td></td>
-            <td>{{transactionProduct.amount.usd()}}</td>
+            <td class="amount">{{transactionProduct.amount.usd()}}</td>
+            <td></td>
           </tr>
         </ng-container>
       </ng-container>
     </tbody>
   </table>
+  <div class="total">
+    <div>{{entities.length}} Items</div>
+    <div>{{sumAmount(entities).usd()}}</div>
+  </div>
 </div>
