Fix broken advanced filter menu.

--- a/src/app/reports/affiliate-report/affiliate-report.component.html
+++ b/src/app/reports/affiliate-report/affiliate-report.component.html
@@ -7,7 +7,7 @@
     [refreshText]="'ADVANCEDFILTER_REFRESHREPORTTEXT'"
     [shareUrl]="shareUrl"
     [groupByEnabled]="true"
-    [hasAdvancedFilter]="false"
+    [hasMenu]="false"
     (dateChanged)="dateChanged($event)"
     (groupByChanged)="groupByChanged($event)"
     (filterTermAdded)="addFilter($event)"
