--- a/src/app/shared/components/advanced-filter/advanced-filter.component.html
+++ b/src/app/shared/components/advanced-filter/advanced-filter.component.html
@@ -50,8 +50,8 @@
       <div class="advanced-filter__icons">
         <mat-icon class="refresh-icon" (click)="refresh()" matTooltip="{{refreshText | translate}} {{refreshValue}}" mdTooltipPosition="left">refresh</mat-icon>
         <share-link [shareUrl]="shareUrl"></share-link>
-        <mat-icon *ngIf="hasAdvancedFilter" [matMenuTriggerFor]="advancedOptions">more_vert</mat-icon>
-        <mat-menu #advancedOptions="matMenu" x-position="before" *ngIf="hasAdvancedFilter">
+        <mat-icon *ngIf="hasMenu" [matMenuTriggerFor]="advancedOptions">more_vert</mat-icon>
+        <mat-menu #advancedOptions="matMenu" x-position="before">
           <button mat-menu-item (click)="toggleAdvanced()"> {{(advanced ? 'ADVANCEDFILTER_HIDE' : 'ADVANCEDFILTER_SHOW') | translate}} </button>
         </mat-menu>
       </div>
