Prevent dashboard buttons from breaking into multiple lines.

--- a/src/app/pages/dashboard-page/dashboard-header/dashboard-header.component.scss
+++ b/src/app/pages/dashboard-page/dashboard-header/dashboard-header.component.scss
@@ -2,6 +2,10 @@
   display: flex;
   align-items: flex-start;
   padding: 15px 25px;
+
+  .flex-custom {
+    min-width: 520px;
+  }
 }
 
 .dashboard-filters {
