--- a/src/app/reports/merchant-report/merchant-report.component.html
+++ b/src/app/reports/merchant-report/merchant-report.component.html
@@ -9,6 +9,7 @@
     [refreshText]="'ADVANCEDFILTER_REFRESHREPORTTEXT'"
     [shareUrl]="shareUrl"
     [groupByEnabled]="true"
+    [hasMenu]="false"
     (dateChanged)="dateChanged($event)"
     (groupByChanged)="groupByChanged($event)"
     (filterTermAdded)="addFilter($event)"
