Redesign invitation/registration flow

--- a/src/app/authentication/auth/auth.component.scss
+++ b/src/app/authentication/auth/auth.component.scss
@@ -1,6 +1,5 @@
 .background {
-  background: -webkit-radial-gradient(#0A38D9, #067BE9) rgba(34,34,40,0.94);
-  background: radial-gradient(#0A38D9, #067BE9) rgba(34,34,40,0.94);
+  background: linear-gradient(to bottom left, #4277C2, #2C98F0);
   display: block;
   position: absolute;
   top: 0;
