--- a/src/assets/scss/_login.scss
+++ b/src/assets/scss/_login.scss
@@ -1,7 +1,6 @@
 .auth0-lock-overlay {
   opacity: 1 !important;
-  background: -webkit-radial-gradient(#0A38D9, #067BE9) rgba(34,34,40,0.94) !important;
-  background: radial-gradient(#0A38D9, #067BE9) rgba(34,34,40,0.94) !important;
+  background: linear-gradient(to bottom left, #4277C2, #2C98F0) !important;
 }
 
 .auth0-lock-widget {
