--- a/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
@@ -4,7 +4,7 @@
     <ng-container *ngIf="mode !== modes.Add">
       <mat-icon [matMenuTriggerFor]="editOptions">more_vert</mat-icon>
       <mat-menu #editOptions="matMenu" x-position="before">
-        <button *ngIf="mode !== modes.Add" mat-menu-item (click)="changeMode.emit(modes.Update)">{{'FULFILLMENT_INFO_EDIT' | translate}}</button>
+        <button *ngIf="mode !== modes.Add" mat-menu-item (click)="enterEditMode()">{{'FULFILLMENT_INFO_EDIT' | translate}}</button>
       </mat-menu>
     </ng-container>
   </div>
